Added news links

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 			pointer-events: none;
 			/* Prevent it from interfering with mouse events */
 		}
+		a{
+			color: green;
+		}
 	</style>
 	<script type="importmap">
 			{
